fix ugly diveIn title wrapping

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -112,7 +112,7 @@
       .title {
         font-weight: bold;
         font-size: 27px;
-        line-height: 56px;
+        line-height: 40px;
 
         .divider.one {
           display: none;
